[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "stream3r"
version = "0.1.0"
description = "STream3R: Scalable Sequential 3D Reconstruction with Causal Transformer"
authors = [
    {name = "Yushi Lan", email = ""},
    {name = "Yihang Luo", email = ""},
    {name = "Fangzhou Hong", email = ""},
    {name = "Shangchen Zhou", email = ""},
    {name = "Honghua Chen", email = ""},
    {name = "Zhaoyang Lyu", email = ""},
    {name = "Shuai Yang", email = ""},
    {name = "Bo Dai", email = ""},
    {name = "Chen Change Loy", email = ""},
    {name = "Xingang Pan", email = ""},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # --------- lightning --------- #
    "lightning>=2.5.0",
    "lightning-bolts",
    "lightning-utilities",
    "torchmetrics",
    "torchinfo",

    # --------- hydra --------- #
    "hydra-core",
    "hydra-colorlog",
    "hydra-optuna-sweeper",

    # --------- loggers --------- #
    "wandb",

    # --------- others --------- #
    "rootutils",         # standardizing the project root setup
    "pre-commit",        # hooks for applying linters on commit
    "rich",              # beautiful text formatting in terminal
    "pytest",            # tests
    "nvitop",
    "h5py",

    # --------- project core --------- #
    "trimesh",
    "roma",
    "open3d",
    "einops",
    "deepspeed",
    "gradio",
    "matplotlib",
    "tqdm",
    "jupyterlab",
    "opencv-python",
    "viser",
    "pillow_heif",
    "plotly",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "seaborn",
    "pyglet<2",
    "huggingface-hub[torch]>=0.22",

    # --------- demo --------- #
    "gradio==5.17.1",
    "onnxruntime",
]

[tool.hatch.build.targets.sdist]
include = ["stream3r/**"]

[tool.hatch.build.targets.wheel]
include = ["stream3r/**"]

[tool.uv]
# Disable build isolation for torch to allow custom compilation
no-build-isolation = ["torch"]